# wagtail-wtr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PLAN.md  README.md  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.js
static_compiled/css/: main.css
static_compiled/js/components/: mobile-menu.js
static_src/css/: main.css  theme.css
templates/: 404.html  base.html  base_page.html
templates/components/: hero.html  language_switcher.html
templates/navigation/: footer.html  header.html
templates/pages/: form_page.html  home_page.html  index_page.html
templates/search/: search.html
templates/wtrx/components/: hero.html
templates/wtrx/navigation/: header.html
wagtail_wtr/: __init__.py  middleware.py  urls.py  wsgi.py
wagtail_wtr/forms/: __init__.py  apps.py  models.py
wagtail_wtr/forms/migrations/: 0001_initial.py
wagtail_wtr/forms/tests/: __init__.py  test_models.py
wagtail_wtr/home/: apps.py  models.py
wagtail_wtr/home/migrations/: 0001_initial.py  0004_homepage_hero_video_alter_homepage_hero_image.py  0005_alter_homepage_hero_video.py  0008_alter_homepage_body.py  0009_alter_homepage_body.py
wagtail_wtr/home/tests/: __init__.py  test_models.py
wagtail_wtr/pages/: apps.py  models.py
wagtail_wtr/search/: apps.py  views.py
wagtail_wtr/settings/: base.py  dev.py  production.py
wagtail_wtr/tests/: __init__.py  test_urls.py
wagtail_wtr/users/: apps.py  models.py
wagtail_wtr/wtrx/: __init__.py  apps.py  models.py  views.py
wtrx/: storage_backends.py
(+55 files in other folders)
