[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-wtr"
version = "0.1.0"
description = "Wagtail CMS platform for campaign, nonprofit, and organizer websites"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "wagtail>=7.0,<7.1",
    "wagtail-localize>=1.9,<2.0",
    "wagtailmedia",
    "dj-database-url",
    "psycopg[binary]",
    "whitenoise",
    "gunicorn",
    "django-storages[s3]",
    "wagtail-storages",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "django-debug-toolbar",
    "factory-boy",
    "wagtail-factories",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
